integrate dialog-action component to overview component

--- a/frontend/src/app/core/components/admin/overview/overview.component.html
+++ b/frontend/src/app/core/components/admin/overview/overview.component.html
@@ -206,8 +206,8 @@
                 <span class="desc">
                   {{
                     preferencesEnabled
-                      ? "Enable Faculty Preferences Submission"
-                      : "Disable Faculty Preferences Submission"
+                      ? "Disable Faculty Preferences Submission"
+                      : "Enable Faculty Preferences Submission"
                   }}
                 </span>
               </div>
