--- a/frontend/src/app/core/components/superadmin/main/main.component.scss
+++ b/frontend/src/app/core/components/superadmin/main/main.component.scss
@@ -183,6 +183,7 @@
               font-size: var(--font-size-md);
               font-weight: 500;
               cursor: pointer;
+              user-select: none;
 
               &:hover {
                 background-color: var(--neutral-option);
