--- a/frontend/src/app/core/components/admin/overview/overview.component.scss
+++ b/frontend/src/app/core/components/admin/overview/overview.component.scss
@@ -288,9 +288,9 @@
                 }
               }
 
-              &:active {
-                transform: scale(0.96);
-              }
+              // &:active {
+              //   transform: scale(0.96);
+              // }
             }
           }
         }
