make mat spinner styling consistent across the whole app

--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -152,8 +152,8 @@
                 <div class="button-content">
                   @if (loadingScheduleId === element.schedule_id) {
                   <mat-spinner
-                    class="custom-spinner sec-spinner"
-                    diameter="24"
+                    class="custom-spinner"
+                    diameter="25"
                   ></mat-spinner>
                   } @else {
                   <mat-icon>edit</mat-icon>
