--- a/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.scss
+++ b/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.scss
@@ -1,5 +1,9 @@
 @import "../../../styles/mixins.scss";
 
+:host {
+  @include custom-spinner(var(--primary-text));
+}
+
 .scheduling-dialog-container {
   @include flex-layout($align: stretch);
 
