--- a/frontend/src/styles/mixins.scss
+++ b/frontend/src/styles/mixins.scss
@@ -98,7 +98,7 @@
 }
 
 /* Custom-color material spinner */
-@mixin custom-spinner($color: var(--primary-one)) {
+@mixin custom-spinner($color: var(--primary-text)) {
   .custom-spinner {
     --mdc-circular-progress-active-indicator-color: #{$color};
   }
