integrate the updated dialog-action to overview component

--- a/frontend/src/app/core/components/admin/overview/overview.component.html
+++ b/frontend/src/app/core/components/admin/overview/overview.component.html
@@ -234,7 +234,7 @@
                 <span class="desc">Send Email to Faculty Members</span>
               </div> -->
               <!--Action: Open Generate Report-->
-              <div class="item generate-report">
+              <div class="item generate-report" (click)="generateReports()">
                 <span mat-symbol="assessment"></span>
                 <span class="desc">Generate the Schedule Reports</span>
               </div>
