implement quick reports generation (beta)

--- a/frontend/src/app/shared/dialog-view-schedule/dialog-view-schedule.component.scss
+++ b/frontend/src/app/shared/dialog-view-schedule/dialog-view-schedule.component.scss
@@ -77,7 +77,7 @@ iframe {
 }
 
 .dialog-actions {
-  @include flex-layout($justify: flex-end);
+  @include flex-layout($justify: flex-end, $gap: var(--spacing-sm));
   .close-button {
     color: var(--primary-text);
   }
