--- a/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
@@ -108,8 +108,8 @@
               class="sec-ripple export-button"
               (click)="onExportSingle(element)"
             >
-              <mat-icon>print</mat-icon>
-              <span>Export</span>
+              <mat-icon>download</mat-icon>
+              <span>Download</span>
             </button>
           </td>
         </ng-container>
