--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -82,12 +82,12 @@
         </ng-container>
 
         <!-- Faculty Units Column -->
-        <ng-container matColumnDef="facultyUnits">
+        <!-- <ng-container matColumnDef="facultyUnits">
           <th mat-header-cell *matHeaderCellDef class="custom-header">Units</th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
             {{ element.facultyUnits }}
           </td>
-        </ng-container>
+        </ng-container> -->
 
         <!-- Action Column -->
         <ng-container matColumnDef="action">
@@ -119,8 +119,8 @@
           <th mat-header-cell *matHeaderCellDef class="custom-header">
             <mat-slide-toggle
               class="header-toggle"
-              matTooltip="Toggle preferences submission for all faculty"
               [checked]="isToggleAllChecked"
+              [matTooltip]="getAllToggleTooltip(isToggleAllChecked)"
               (change)="onToggleAllChange($event)"
             >
             </mat-slide-toggle>
@@ -128,7 +128,7 @@
           <td mat-cell *matCellDef="let element" class="custom-cell">
             <mat-slide-toggle
               [(ngModel)]="element.is_enabled"
-              matTooltip="Toggle preferences submission for this faculty only"
+              [matTooltip]="getSingleToggleTooltip(element)"
               (change)="onToggleSingleChange(element)"
             >
             </mat-slide-toggle>
