--- a/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
@@ -119,11 +119,7 @@
           <th mat-header-cell *matHeaderCellDef class="custom-header">
             <mat-slide-toggle
               class="header-toggle"
-              [matTooltip]="
-                hasSchedulesForToggleAll
-                  ? 'Publish/unpublish schedule for all applicable faculty'
-                  : 'Cannot publish/unpublish empty schedules'
-              "
+              [matTooltip]="getAllToggleTooltip(isToggleAllChecked)"
               [checked]="isToggleAllChecked"
               [disabled]="!hasSchedulesForToggleAll"
               (change)="onToggleAllChange($event)"
@@ -133,11 +129,7 @@
             <mat-slide-toggle
               [(ngModel)]="element.isEnabled"
               [disabled]="!element.schedules || element.schedules.length === 0"
-              [matTooltip]="
-                element.schedules && element.schedules.length > 0
-                  ? 'Publish/unpublish schedule for this faculty only'
-                  : 'Cannot publish/unpublish empty schedules'
-              "
+              [matTooltip]="getSingleToggleTooltip(element)"
               (change)="onToggleChange(element)"
             ></mat-slide-toggle>
           </td>
