add validation for emopty schedules in actions

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -270,6 +270,10 @@ span[mat-symbol] {
     var(--mat-standard-button-toggle-divider-color, var(--mat-app-outline)) !important;
 }
 
+.mat-mdc-snack-bar-container .mat-mdc-button.mat-mdc-snack-bar-action:not(:disabled) {
+  color: var(--primary-text-reverse) !important;
+}
+
 [mat-flat-button] {
   color: white !important;
 }
