--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -31,6 +31,7 @@
 
   --primary-one-fade: #98292947;
   --primary-text-two: #f5cbcb;
+  --primary-text-reverse: #f08383;
 
   --error-base: #800000;
 
@@ -107,6 +108,7 @@
 
   --primary-one-fade: #ff3c3c38;
   --primary-text-two: #3f0000;
+  --primary-text-reverse: #800000;
 
   --error-base: #b43a3a;
 
