remove pop effect in action button

--- a/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.html
+++ b/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.html
@@ -149,7 +149,7 @@
           Cancel
         </button>
         <button
-          class="action-button pop"
+          class="action-button"
           mat-flat-button
           [disabled]="hasConflicts || isLoading || scheduleForm.invalid"
           (click)="onAssign()"
