remove maximum units restriction

--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.html
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.html
@@ -19,10 +19,10 @@
     </div>
 
     <div id="units_container" [class.disabled]="!isPreferencesEnabled">
-      <div class="units max" [@fadeAnimation]>
+      <!-- <div class="units max" [@fadeAnimation]>
         <h2>{{ maxUnits }}</h2>
         <span>Max. Units Allowed</span>
-      </div>
+      </div> -->
       <div class="units total" [@fadeAnimation]>
         <h2>{{ units }}</h2>
         <span>Total Units Selected</span>
