--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
@@ -88,7 +88,7 @@
       padding: var(--spacing-md);
 
       h2 {
-        font-size: var(--font-size-2xl);
+        font-size: var(--font-size-2xxl);
       }
 
       h2,
@@ -102,7 +102,8 @@
     }
 
     .total {
-      @include gradient-secondary(315deg);
+      // @include gradient-secondary(315deg);
+      @include gradient-primary(315deg);
     }
   }
 }
