--- a/frontend/src/app/shared/dialog-confirm-pref/dialog-confirm-pref.component.html
+++ b/frontend/src/app/shared/dialog-confirm-pref/dialog-confirm-pref.component.html
@@ -41,7 +41,7 @@
           <mat-progress-spinner
             [diameter]="25"
             mode="indeterminate"
-            class="spinner-in-button"
+            class="custom-spinner"
           ></mat-progress-spinner>
         } @else {
           Confirm Submission
