make resetCaches method more flexible

--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -146,7 +146,7 @@
               <button
                 mat-button
                 class="sec-ripple edit-button"
-                (click)="openEditDialog(element)"
+                (click)="openEditScheduleDialog(element)"
                 [disabled]="loadingScheduleId === element.schedule_id"
               >
                 <div class="button-content">
