--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -95,22 +95,50 @@
             Action
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            <button
-              mat-button
-              class="sec-ripple view-button"
-              (click)="onView(element)"
+            <span
+              [matTooltip]="
+                !hasSubmittedPreferences(element)
+                  ? element.facultyName +
+                    ' has not yet submitted their preferences'
+                  : ''
+              "
+              matTooltipDisabled="false"
             >
-              <mat-icon>visibility</mat-icon>
-              <span>View Preferences</span>
-            </button>
-            <button
-              mat-button
-              class="sec-ripple export-button"
-              (click)="onExportSingle(element)"
+              <button
+                mat-button
+                class="sec-ripple view-button"
+                (click)="onView(element)"
+                [disabled]="!hasSubmittedPreferences(element)"
+                [ngClass]="{
+                  'disabled-button': !hasSubmittedPreferences(element)
+                }"
+              >
+                <mat-icon>visibility</mat-icon>
+                <span>View Preferences</span>
+              </button>
+            </span>
+            <span
+              [matTooltip]="
+                !hasSubmittedPreferences(element)
+                  ? element.facultyName +
+                    ' has not yet submitted their preferences'
+                  : ''
+              "
+              matTooltipDisabled="false"
             >
-              <mat-icon>download</mat-icon>
-              <span>Download</span>
-            </button>
+              <button
+                mat-button
+                class="sec-ripple export-button"
+                (click)="onExportSingle(element)"
+                [disabled]="!hasSubmittedPreferences(element)"
+                [ngClass]="{
+                  'disabled-button': !hasSubmittedPreferences(element)
+                }"
+              >
+                <mat-icon>download</mat-icon>
+                <span>Download</span>
+              </button>
+            </span>
           </td>
         </ng-container>
 
