--- a/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
@@ -95,22 +95,44 @@
             Action
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            <button
-              mat-button
-              class="sec-ripple view-button"
-              (click)="onView(element)"
+            <span
+              [matTooltip]="
+                !hasSchedules(element)
+                  ? element.facultyName + ' has no schedules available.'
+                  : ''
+              "
+              matTooltipDisabled="false"
             >
-              <mat-icon>visibility</mat-icon>
-              <span>View Schedule</span>
-            </button>
-            <button
-              mat-button
-              class="sec-ripple export-button"
-              (click)="onExportSingle(element)"
+              <button
+                mat-button
+                class="sec-ripple view-button"
+                (click)="onView(element)"
+                [disabled]="!hasSchedules(element)"
+                [ngClass]="{ 'disabled-button': !hasSchedules(element) }"
+              >
+                <mat-icon>visibility</mat-icon>
+                <span>View Schedule</span>
+              </button>
+            </span>
+            <span
+              [matTooltip]="
+                !hasSchedules(element)
+                  ? element.facultyName + ' has no schedules available.'
+                  : ''
+              "
+              matTooltipDisabled="false"
             >
-              <mat-icon>download</mat-icon>
-              <span>Download</span>
-            </button>
+              <button
+                mat-button
+                class="sec-ripple export-button"
+                (click)="onExportSingle(element)"
+                [disabled]="!hasSchedules(element)"
+                [ngClass]="{ 'disabled-button': !hasSchedules(element) }"
+              >
+                <mat-icon>download</mat-icon>
+                <span>Download</span>
+              </button>
+            </span>
           </td>
         </ng-container>
 
