--- a/frontend/src/app/core/components/admin/reports/report-programs/report-programs.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-programs/report-programs.component.html
@@ -99,22 +99,44 @@
             Action
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            <button
-              mat-button
-              class="sec-ripple view-button"
-              (click)="onView(element)"
+            <span
+              [matTooltip]="
+                !hasSchedules(element)
+                  ? element.program_code + ' has no schedules available.'
+                  : ''
+              "
+              matTooltipDisabled="false"
             >
-              <mat-icon>visibility</mat-icon>
-              <span>View Schedule</span>
-            </button>
-            <button
-              mat-button
-              class="sec-ripple export-button"
-              (click)="onExportSingle(element)"
+              <button
+                mat-button
+                class="sec-ripple view-button"
+                (click)="onView(element)"
+                [disabled]="!hasSchedules(element)"
+                [ngClass]="{ 'disabled-button': !hasSchedules(element) }"
+              >
+                <mat-icon>visibility</mat-icon>
+                <span>View Schedule</span>
+              </button>
+            </span>
+            <span
+              [matTooltip]="
+                !hasSchedules(element)
+                  ? element.program_code + ' has no schedules available.'
+                  : ''
+              "
+              matTooltipDisabled="false"
             >
-              <mat-icon>download</mat-icon>
-              <span>Download</span>
-            </button>
+              <button
+                mat-button
+                class="sec-ripple export-button"
+                (click)="onExportSingle(element)"
+                [disabled]="!hasSchedules(element)"
+                [ngClass]="{ 'disabled-button': !hasSchedules(element) }"
+              >
+                <mat-icon>download</mat-icon>
+                <span>Download</span>
+              </button>
+            </span>
           </td>
         </ng-container>
 
@@ -141,7 +163,6 @@
         [pageSize]="10"
         [pageSizeOptions]="[5, 10, 25, 50, 100]"
         [showFirstLastButtons]="true"
-        (page)="updateDisplayedData()"
         aria-label="Select page"
       >
       </mat-paginator>
