--- a/frontend/src/app/core/components/admin/reports/report-programs/report-programs.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-programs/report-programs.component.html
@@ -13,6 +13,10 @@
       [showAddButton]="false"
       (export)="onExportAll()"
       (inputChange)="onInputChange($event)"
+      [buttonDisabled]="!hasAnySchedules"
+      [tooltipMessage]="
+        !hasAnySchedules ? 'No schedules available for export' : ''
+      "
     >
     </app-table-header>
   </div>
@@ -102,7 +106,7 @@
             <span
               [matTooltip]="
                 !hasSchedules(element)
-                  ? element.program_code + ' has no schedules available.'
+                  ? element.program_code + ' has no schedules available'
                   : ''
               "
               matTooltipDisabled="false"
@@ -121,7 +125,7 @@
             <span
               [matTooltip]="
                 !hasSchedules(element)
-                  ? element.program_code + ' has no schedules available.'
+                  ? element.program_code + ' has no schedules available'
                   : ''
               "
               matTooltipDisabled="false"
