--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -10,6 +10,10 @@
       [inputFields]="inputFields"
       [showExportButton]="true"
       [showAddButton]="false"
+      [buttonDisabled]="!hasAnyPreferences"
+      [tooltipMessage]="
+        !hasAnyPreferences ? 'No faculty preferences available for export' : ''
+      "
       (export)="onExportAll()"
       (inputChange)="onInputChange($event)"
     >
