--- a/frontend/src/app/shared/table-header/table-header.component.html
+++ b/frontend/src/app/shared/table-header/table-header.component.html
@@ -1,84 +1,100 @@
 <div class="header-container">
   <!-- Search Input -->
   <form [formGroup]="form" class="input-container">
-    @for (field of inputFields; track field.key) {
-      @if (field.type === 'text') {
-        <mat-form-field appearance="fill" class="search-field" subscriptSizing="dynamic">
-          <mat-label>{{ field.label }}</mat-label>
-          <input maxlength="50" matInput [formControlName]="field.key" [placeholder]="field.placeholder || ''" />
-          <mat-icon matPrefix>search</mat-icon>
-          @if (form.get(field.key)?.value && form.get(field.key)?.value.length > 0) {
-            <button 
-            mat-icon-button 
-            matSuffix 
-            (click)="onClearSearch(field.key)">
-            <mat-icon>close</mat-icon>
-          </button>
-          }
-        </mat-form-field>
-      } 
-      @if (field.type === 'select') {
-        <mat-form-field
-          appearance="fill"
-          class="select-field"
-          [ngClass]="{
-            'program-field': field.key === 'program',
-            'year-level-field': field.key === 'yearLevel',
-            'curriculum-field': field.key === 'curriculum',
-            'sections-field': field.key === 'section'
-          }"
-          subscriptSizing="dynamic"
-        >
-          <mat-label>{{ field.label }}</mat-label>
-          <mat-select [formControlName]="field.key">
-            @for (option of field.options; track option) {
-              <mat-option [value]="option">
-                {{ option }}
-              </mat-option>
-            }
-            @if (field.key === 'academicYear') {
-              <mat-option (click)="onAddAcademicYearClick()">
-                Add Academic Year
-              </mat-option>
-            }
-          </mat-select>
-        </mat-form-field>
+    @for (field of inputFields; track field.key) { @if (field.type === 'text') {
+    <mat-form-field
+      appearance="fill"
+      class="search-field"
+      subscriptSizing="dynamic"
+    >
+      <mat-label>{{ field.label }}</mat-label>
+      <input
+        maxlength="50"
+        matInput
+        [formControlName]="field.key"
+        [placeholder]="field.placeholder || ''"
+      />
+      <mat-icon matPrefix>search</mat-icon>
+      @if (form.get(field.key)?.value && form.get(field.key)?.value.length > 0)
+      {
+      <button mat-icon-button matSuffix (click)="onClearSearch(field.key)">
+        <mat-icon>close</mat-icon>
+      </button>
       }
-    }
+    </mat-form-field>
+    } @if (field.type === 'select') {
+    <mat-form-field
+      appearance="fill"
+      class="select-field"
+      [ngClass]="{
+        'program-field': field.key === 'program',
+        'year-level-field': field.key === 'yearLevel',
+        'curriculum-field': field.key === 'curriculum',
+        'sections-field': field.key === 'section'
+      }"
+      subscriptSizing="dynamic"
+    >
+      <mat-label>{{ field.label }}</mat-label>
+      <mat-select [formControlName]="field.key">
+        @for (option of field.options; track option) {
+        <mat-option [value]="option">
+          {{ option }}
+        </mat-option>
+        } @if (field.key === 'academicYear') {
+        <mat-option (click)="onAddAcademicYearClick()">
+          Add Academic Year
+        </mat-option>
+        }
+      </mat-select>
+    </mat-form-field>
+    } }
   </form>
 
   <!--Objects-->
   <div class="object-container">
     @if (showActiveYearAndSem) {
-      <div class="active-year-sem-container pop" (click)="onActiveYearSemClick()" matRipple>
-        <p class="text">A.Y. {{ activeYear }}, {{ activeSemester }}</p>
-        <p class="label">Active Year & Semester</p>
-      </div>
+    <div
+      class="active-year-sem-container pop"
+      (click)="onActiveYearSemClick()"
+      matRipple
+    >
+      <p class="text">A.Y. {{ activeYear }}, {{ activeSemester }}</p>
+      <p class="label">Active Year & Semester</p>
+    </div>
     }
   </div>
 
   <!--Buttons-->
   @if (showButtons) {
-    <div class="button-container">
-      <!-- Export to PDF Button -->
-      @if (showExportButton) {
-        <button mat-flat-button class="ter-ripple custom-mat-button export-button" (click)="onExport()">
-          <mat-icon>picture_as_pdf</mat-icon>
-          Export to PDF
-        </button>
-      }
-      <!-- Add Button -->
-      @if (showAddButton) {
-        <button
-          mat-flat-button
-          class="custom-mat-button add-button"
-          [disabled]="buttonDisabled"
-          (click)="onAdd()"
-        >
-          <mat-icon>{{ addIconName }}</mat-icon>
-          {{ addButtonLabel }}
-        </button>
-      }
-    </div>
+  <div class="button-container">
+    <!-- Export to PDF Button -->
+    @if (showExportButton) {
+    <span [matTooltip]="tooltipMessage" [matTooltipDisabled]="!buttonDisabled">
+      <button
+        mat-flat-button
+        class="ter-ripple custom-mat-button export-button"
+        (click)="onExport()"
+        [disabled]="buttonDisabled"
+        [ngClass]="{ 'disabled-button': buttonDisabled }"
+      >
+        <mat-icon>picture_as_pdf</mat-icon>
+        Export to PDF
+      </button>
+    </span>
+
+    }
+    <!-- Add Button -->
+    @if (showAddButton) {
+    <button
+      mat-flat-button
+      class="custom-mat-button add-button"
+      [disabled]="buttonDisabled"
+      (click)="onAdd()"
+    >
+      <mat-icon>{{ addIconName }}</mat-icon>
+      {{ addButtonLabel }}
+    </button>
+    }
+  </div>
   }
 </div>
