--- a/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
@@ -63,7 +63,7 @@
             Faculty Type
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            <span
+            <div
               class="faculty-type"
               [ngClass]="{
                 'full-time':
@@ -78,7 +78,7 @@
               }"
             >
               {{ element.facultyType }}
-            </span>
+            </div>
           </td>
         </ng-container>
 
