--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -66,7 +66,7 @@
             Faculty Type
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            <span
+            <div
               class="faculty-type"
               [ngClass]="{
                 'full-time':
@@ -81,7 +81,7 @@
               }"
             >
               {{ element.facultyType }}
-            </span>
+            </div>
           </td>
         </ng-container>
 
