add min height to digit columns

--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
@@ -57,6 +57,10 @@
       position: sticky;
       top: 0;
       z-index: 2;
+
+      &.min {
+        min-width: var(--spacing-md);
+      }
     }
 
     .custom-cell {
