--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -62,7 +62,9 @@
 
         <!-- Lec Hours Column -->
         <ng-container matColumnDef="lec_hours">
-          <th mat-header-cell *matHeaderCellDef class="custom-header">Lec</th>
+          <th mat-header-cell *matHeaderCellDef class="custom-header min">
+            Lec
+          </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
             {{ element.lec_hours }}
           </td>
@@ -70,7 +72,9 @@
 
         <!-- Lab Hours Column -->
         <ng-container matColumnDef="lab_hours">
-          <th mat-header-cell *matHeaderCellDef class="custom-header">Lab</th>
+          <th mat-header-cell *matHeaderCellDef class="custom-header min">
+            Lab
+          </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
             {{ element.lab_hours }}
           </td>
@@ -78,7 +82,9 @@
 
         <!-- Units Column -->
         <ng-container matColumnDef="units">
-          <th mat-header-cell *matHeaderCellDef class="custom-header">Units</th>
+          <th mat-header-cell *matHeaderCellDef class="custom-header min">
+            Units
+          </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
             {{ element.units }}
           </td>
@@ -87,7 +93,7 @@
         <!-- Tuition Hours Column -->
         <ng-container matColumnDef="tuition_hours">
           <th mat-header-cell *matHeaderCellDef class="custom-header">
-            Tuition Hours
+            Tuition<br />Hours
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
             {{ element.tuition_hours }}
@@ -150,8 +156,16 @@
                 [disabled]="loadingScheduleId === element.schedule_id"
               >
                 <div class="button-content">
-                  <ng-container *ngIf="loadingScheduleId === element.schedule_id; else editIcon">
-                    <mat-spinner class="custom-spinner" diameter="25"></mat-spinner>
+                  <ng-container
+                    *ngIf="
+                      loadingScheduleId === element.schedule_id;
+                      else editIcon
+                    "
+                  >
+                    <mat-spinner
+                      class="custom-spinner"
+                      diameter="25"
+                    ></mat-spinner>
                   </ng-container>
                   <ng-template #editIcon>
                     <mat-icon>edit</mat-icon>
