fix time on sunday schedule not showing

--- a/frontend/src/app/shared/schedule-timeline/schedule-timeline.component.scss
+++ b/frontend/src/app/shared/schedule-timeline/schedule-timeline.component.scss
@@ -7,7 +7,7 @@ $day-colors: (
   thursday: (var(--aqua-primary), var(--aqua-text)),
   friday: (var(--purple-primary), var(--purple-text)),
   saturday: (var(--green-primary), var(--green-text)),
-  sunday: (var(--primary-text), var(--primary-text))
+  sunday: (var(--primary-text), var(--primary-text-two))
 );
 
 @each $day, $colors in $day-colors {
